# devlead

./: .gitignore  CLAUDE.md  LICENSE  README.md  devlead.toml  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
claude_docs/: _intake_bugs.md  _intake_features.md  _intake_gaps.md  _living_standing_instructions.md  _project_roadmap.md  _project_status.md  _project_tasks.md  dashboard_2026-04-05.html
commands/: audit.md  awareness.md  config.md  focus.md  gate.md  ingest.md  init.md  intake.md  migrate.md  promote.md  scratchpad.md  triage.md  verify-links.md
devlead_docs/: _audit_log.jsonl  _aware_design.md  _aware_features.md  _design_section1.md  _effort_log.jsonl  _intake_features.md  _intake_hierarchy_features.md  _intake_hierarchy_nonfunctional.md  _living_decisions.md  _living_glossary.md  _living_goals.md  _living_metrics.md  _project_hierarchy.md  _project_status.md  _resume.md  _resume_archive_2026-04-14.md  _routing_table.md  _scratchpad.md  _session_history.jsonl  _state_history.jsonl
docs/: 2026-04-05-devlead-design.md  USER_GUIDE.md  dashboard-2026-04-15.html  dashboard-2026-04-16.html  dashboard-2026-04-17.html  devlead-foundations.html  devlead-vision-2026-04-16.html  memory_and_enforcement_design_2026-04-14.html  plugin-bridge.md  session-report-2026-04-16.html
tests/: conftest.py  test_audit_cli.py  test_audit_integration.py  test_cli_integration.py  test_collab_pipeline.py  test_config.py  test_convergence.py  test_dashboard.py  test_doc_parser.py  test_doctor.py  test_effort_wiring.py  test_file_path_enforcement.py  test_hierarchy_schema.py  test_hooks.py  test_init.py  test_kpi_engine.py  test_metric_source.py  test_portfolio.py  test_project_init.py  test_promise_ledger.py  test_render.py  (+7 more)
(+208 files in other folders)
